--- a/source/_posts/2019-plan.md
+++ b/source/_posts/2019-plan.md
@@ -4,14 +4,25 @@ date: 2019-03-15 11:11:46
 tags: 计划
 ---
 
+# Javascript 
+
 * [ ] 使用javascript开发编程语言
 * [x] 使用javascript开发2d游戏引擎
 * [ ] 使用javascript开发jquery
+
+# 数据结构
+
 * [ ] 可以手写创建各种数据结构
 * [ ] 牢记各种搜索排序算法，熟悉更深层此算法
+
+# 后端
+
 * [ ] 熟练使用flask
 * [ ] 熟练使用docker部署flask应用
 * [ ] 熟练使用ubuntu操作系统
+
+# 架构及管理
+
 * [ ] 学习标准软件架构流程
 * [ ] 使用所学知识做一款较好的软件
 * [ ] 学习如何领导团队
