--- a/source/_posts/对象的扩展.md
+++ b/source/_posts/对象的扩展.md
@@ -8,15 +8,15 @@ tags: ES6
 
 
 
-## 对象的扩展
 
-### 属性，方法的简洁写法
+
+# 属性，方法的简洁写法
 
 * 属性名为变量名，属性值为变量值。
 
-<!--more-->
 
-  ```
+
+  ```js
   const name = 'lrh';
   const age = 19;
   const person = {
@@ -34,7 +34,7 @@ tags: ES6
 
 * 方法的简写
 
-  ```
+  ```js
   const age = 18;
   const person = {
       name: 'lrh',
@@ -51,9 +51,9 @@ tags: ES6
 
 
 
-### 属性名可以使用表达式
+# 属性名可以使用表达式
 
-```
+```js
 //ES5定义对象的属性
 const person = {};
 person.name = 'lrh';
@@ -78,13 +78,13 @@ const person = {
 
 
 
-### 使用Object.is()方法比较两个值相等
+# 使用Object.is()方法比较两个值相等
 
 * 相等运算符（==）会自动转换数据类型。
 * 严格相等运算符（===）会导致NaN不等于NaN，+0等于-0。
 * Object.is()方法与严格相等基本一致，并弥补了以上两个不足。
 
-  ```
+  ```js
   NaN === NaN;
   +0 === -0;
   Object.is(NaN, NaN);
@@ -95,7 +95,7 @@ const person = {
 
 
 
-### 使用Object.assign()方法浅拷贝对象
+# 使用Object.assign()方法浅拷贝对象
 
 * 将源对象合并到目标对象
 
@@ -103,7 +103,7 @@ const person = {
 
 * 该方法是浅拷贝，即如果源对象的某个属性值是对象，那么目标对象拷贝的是这个对象的引用，源对象的任何变化，都会反映到目标对象上。
 
-  ```
+  ```js
     const target = {a: 1};
     const source1 = {b: 2};
     const source2 = {c: 3};
@@ -115,47 +115,45 @@ const person = {
 
   1. 为对象添加属性
 
-    ```
-    class Person{
-    	constructor(name, age) {
-          Object.assign(this, {name, age});
-    	}
-    }
-
-    new Person('lrh', 18); 
-
-    ```
-
+      ```js
+      class Person{
+      	constructor(name, age) {
+            Object.assign(this, {name, age});
+      	}
+      }
+      new Person('lrh', 18); 
+      ```
+    
   2. 为对象添加方法
 
 
-     ```
-     class Person{
-       constructor(name, age) {
-         Object.assign(this, {name, age});
+       ```js
+       class Person{
+         constructor(name, age) {
+           Object.assign(this, {name, age});
+         }
        }
-     }
-    
-     Object.assign(Person.prototype, {
-       getName() {
+      
+       Object.assign(Person.prototype, {
+         getName() {
+           return this.name;
+         },
+         getAge() {
+           return this.age;
+         }
+       });
+      
+       new Person('lrh', 18).getName();//lrh
+      
+       //等同于
+       Person.prototype.getName = function() {
          return this.name;
-       },
-       getAge() {
-         return this.age;
-       }
-     });
-    
-     new Person('lrh', 18).getName();//lrh
-    
-     //等同于
-     Person.prototype.getName = function() {
-       return this.name;
-     };
-     ```
+       };
+       ```
 
   3. 克隆对象
 
-     ```
+     ```js
      const person = {
        name: 'lrh',
        age: 18
@@ -167,7 +165,7 @@ const person = {
 
   4. 合并对象
 
-     ```tiki wiki
+     ```js
      const source1 = {name: 'lrh'};
      const source2 = {age: 18};
      const p = Object.assign({}, source1, source2);//{ name: 'lrh', age: 18 }
@@ -175,7 +173,7 @@ const person = {
 
   5. 为属性指定默认值
 
-     ```
+     ```js
      const options = {
        container: '#wrap',
        draggable: true,
@@ -197,11 +195,11 @@ const person = {
 
      ​
 
-### 遍历属性
+# 遍历属性
 
 * for...in遍历对象自身的和继承的可枚举属性，不包含Symbol属性。
 
-  ```
+  ```js
   class Person{
     constructor(name, age) {
       Object.assign(this, {name, age});
@@ -229,7 +227,7 @@ const person = {
 
 * Object.keys(obj)返回一个数组，包含对象自身所有的可枚举属性，不包含继承的属性，不包含Symbol属性。
 
-  ```
+  ```js
   const type = Symbol('type');
   const person = {
     name: 'lrh',
@@ -241,7 +239,7 @@ const person = {
 
 * Object.getOwnPropertyNames(obj)返回一个数组，包含对象自身所有的可枚举属性和不可枚举属性，不包含Symbol属性。
 
-  ```
+  ```js
   const arr = [1, 2, 3]
   Object.getOwnPropertyNames(arr);//['0', '1', '2', 'length']
   ```
@@ -252,7 +250,7 @@ const person = {
 
 * ES2015新增遍历法：Object.keys()， ES2017新增遍历方法：Object.values(), Object.entries()。
 
-  ```
+  ```js
   const person = {
     name: 'lrh',
     age: 18
@@ -294,7 +292,7 @@ const person = {
 
 
 
-### 使用扩展运算符
+# 使用扩展运算符
 
 * 扩展运算符是用于操作数组的
 
@@ -302,7 +300,7 @@ const person = {
 
 * 用于取出参数对象的所有可遍历属性，拷贝到当前对象中，等同于使用Object.assign()。
 
-  ```
+  ```js
   const person = {
     name: 'lrh',
     age: 18
