--- a/source/_posts/应用平台桌面版.md
+++ b/source/_posts/应用平台桌面版.md
@@ -7,7 +7,7 @@ tags:
 
 ---
 
-## 简介
+# 简介
 
 使用web技术开发的应用平台。
 
@@ -35,7 +35,7 @@ tags:
 
 应用就打开了。
 
-## 音乐播放器
+# 音乐播放器
 它只包含基本的功能：导入本地歌曲列表；切换一个主题；控制正在播放的歌曲。
 效果图如下：
 
@@ -44,7 +44,7 @@ tags:
 UX方面做得不是很好，以后会更加注重这一块。
 
 
-## 聊天室
+# 聊天室
 聊天室是我觉得做得比较好的一个，因为它包含了很多功能。
 除了最基本的聊天外，还支持发一些表情，还可以设置字体，背景，以及主题。
 里面还集成了一个地图，如果是用电脑浏览器打开的，将会在地图上显示自己的
@@ -52,11 +52,11 @@ UX方面做得不是很好，以后会更加注重这一块。
 
 ![ap](/images/chatRoom2.png)
 
-## 爱心鱼
+# 爱心鱼
 最后一个是个用js写的游戏，但这并不是原创，只是用来熟悉canvas的api。
 效果图如下：
 
 ![ap](/images/loveFish.png)
 
-## 总结
+# 总结
 这些是我刚学Javascript不久做的东西，所以有很多地方不够完善。但是它们让我看到了Javascript强大的一面。
