--- a/source/_posts/数值的扩展.md
+++ b/source/_posts/数值的扩展.md
@@ -7,17 +7,17 @@ tags: ES6
 
 
 
-## 使用0b和0o表示二进制和八进制
-<!--more-->
+# 使用0b和0o表示二进制和八进制
 
-```
+
+```js
 0b111 === 7;
 0o10 === 8;
 ```
 
-## Number新API
+# Number新API
 
-```
+```js
 Number.isFinite();
 Number.isNaN();
 Number.parseInt();
@@ -26,9 +26,9 @@ Number.isInteger();
 Number.isSafeInteget();
 ```
 
-## Math扩展API
+# Math扩展API
 
-```
+```js
 Math.trunc(); //去除一个数的小数部分，返回整数部分。
 Math.sign(); //整数返回1，负数返回-1,0返回0，-0返回-0，其他返回NaN
 Math.cbrt(); //计算立方根
