--- a/source/_posts/爱听播放器.md
+++ b/source/_posts/爱听播放器.md
@@ -12,17 +12,17 @@ tags:
 ![AiTing](/images/aiting1.png)
 
 
-## 简介
+# 简介
 
 一个简洁、好看、功能丰富的歌曲，书籍播放器。
 
 
-## 下载
+# 下载
 
 可以直接下载我打包好的windows版本： [点击这里下载免安装版爱听播放器](http://www.demodashi.com/demo/12542.html), [Github点赞](https://github.com/renhongl/AiTing)。
 
 
-## 自己打包
+# 自己打包
 
 * 运行`npm install`安装依赖。
 
@@ -30,11 +30,11 @@ tags:
 * 使用终端进入根目录，运行`npm run package`。
 * 接着在根目录会生成**AiTing-win32-x64**文件，进入此目录，双击**AiTing.exe**即可运行此软件。
 
-## 功能展示
+# 功能展示
 
 本软件是在网页中抓的API，音乐播放抓的是酷狗的API，书籍播放抓的是懒人听书的API。主要抓了搜索功能和基本推荐功能。
 
-### 音乐播放
+## 音乐播放
 
 ![AiTing](/images/aiting3.png)
 
@@ -48,7 +48,7 @@ tags:
 
 这是歌词界面。
 
-### 书籍播放
+## 书籍播放
 
 ![AiTing](/images/aiting5.png)
 
@@ -62,7 +62,7 @@ tags:
 
 由于书籍章节的搜索很慢，所以使用分页显示的方式。
 
-## 使用技术
+# 使用技术
 
 Javascript, Electron, Webpack, React.
 
