--- a/source/_posts/迭代器模式.md
+++ b/source/_posts/迭代器模式.md
@@ -6,7 +6,7 @@ tags:
 ---
 
 
-### 迭代器模式
+# 什么是迭代器模式
 
 迭代器模式是指提供一种方法顺序访问一个聚合对象中的各个元素，而又不需要暴露该对象的内部表示。
 
@@ -16,4 +16,4 @@ tags:
 
 中止迭代器可以像普通for循环中的break一样，提供一种跳出循环的方法。
 
-<!--more-->
+
