--- a/source/_posts/函数式编程.md
+++ b/source/_posts/函数式编程.md
@@ -5,9 +5,8 @@ date: 2018-06-18 21:57:52
 tags: Javascript
 ---
 
-### 定义
+# 什么是函数式编程
 
-<!--more-->
 
 * 简单说，"函数式编程"是一种"编程范式"（programming paradigm），也就是如何编写程序的方法论。
 它属于"结构化编程"的一种，主要思想是把运算过程尽量写成一系列嵌套的函数调用。
@@ -18,7 +17,7 @@ tags: Javascript
 只有纯的、没有副作用的函数，才是合格的函数。
 
 
-### 特点
+# 特点
 1. 函数是"第一等公民"
 指的是函数与其他数据类型一样，处于平等地位，可以赋值给其他变量，也可以作为参数，传入另一个函数，或者作为别的函数的返回值。
 
@@ -38,7 +37,7 @@ tags: Javascript
 指的是函数的运行不依赖于外部变量或"状态"，只依赖于输入的参数，任何时候只要参数相同，引用函数所得到的返回值总是相同的。
 
 
-### 意义
+# 意义
 1. 代码简洁，开发快速
 函数式编程大量使用函数，减少了代码的重复，因此程序比较短，开发速度较快。
 
