--- a/source/_posts/原型模式.md
+++ b/source/_posts/原型模式.md
@@ -6,7 +6,7 @@ tags:
 ---
 
 
-### 原型模式
+# 什么是原型模式
 
 类并不是必须的，对象未必需要从类中创建而来，一个对象是通过克隆另外一个对象所得到的。
 
@@ -18,71 +18,73 @@ ECMAScript5提供了Object.create方法，可以用来克隆对象。
 
 以上两种替代方式，内部都是克隆原型而得到对象。
 
-<!--more-->
+
 
 **注：** Javascript中的根对象是Object，所有的对象都从根对象克隆而来。
 
 
 
-函数式例子：
+# 函数式例子：
 
-	/**
-	 * 使用原型继承方式实现一个模板方法模式。
-	 * 通过设置钩子方法，可以实现不同的子类使用不同的父类约束。
-	 */
-	
-	(function () {
-	
-	    var Beverage = function () {};
-	    Beverage.prototype.boilWater = function () {
-	        console.log('把水煮沸。');
-	    };
-	
-	    Beverage.prototype.brew = function () {
-	        throw new Error('子类必须重写冲泡方法');
-	    };
-	
-	    Beverage.prototype.poutInCup = function () {
-	        throw new Error('子类必须重写把饮料倒入杯子方法');
-	    };
-	
-	    Beverage.prototype.addCondiments = function () {
-	        throw new Error('子类必须重写加调料方法');
-	    };
-	
-	    Beverage.prototype.customerAddCondiments = function () {
-	        return true;
-	    }
-	    
-	    Beverage.prototype.init = function () {
-	        this.boilWater();
-	        this.brew();
-	        this.poutInCup();
-	        if (this.customerAddCondiments()) {
-	            this.addCondiments();
-	        }
-	    }
-	
-	    var Coffee = function () {};
-	    Coffee.prototype = new Beverage();
-	
-	    Coffee.prototype.brew = function () {
-	        console.log('冲泡咖啡');
-	    };
-	
-	    Coffee.prototype.poutInCup = function () {
-	        console.log('把咖啡倒进杯子');
-	    };
-	
-	    Coffee.prototype.addCondiments = function () {
-	        console.log('给咖啡加糖加牛奶');
-	    };
-	
-	    Coffee.prototype.customerAddCondiments = function () {
-	        return window.confirm('请问需要调料吗？');  
-	    }
-	
-	    var coffee = new Coffee();
-	    coffee.init();
-	
-	})();
+```js
+/**
+ * 使用原型继承方式实现一个模板方法模式。
+ * 通过设置钩子方法，可以实现不同的子类使用不同的父类约束。
+ */
+
+(function () {
+
+    var Beverage = function () {};
+    Beverage.prototype.boilWater = function () {
+        console.log('把水煮沸。');
+    };
+
+    Beverage.prototype.brew = function () {
+        throw new Error('子类必须重写冲泡方法');
+    };
+
+    Beverage.prototype.poutInCup = function () {
+        throw new Error('子类必须重写把饮料倒入杯子方法');
+    };
+
+    Beverage.prototype.addCondiments = function () {
+        throw new Error('子类必须重写加调料方法');
+    };
+
+    Beverage.prototype.customerAddCondiments = function () {
+        return true;
+    }
+    
+    Beverage.prototype.init = function () {
+        this.boilWater();
+        this.brew();
+        this.poutInCup();
+        if (this.customerAddCondiments()) {
+            this.addCondiments();
+        }
+    }
+
+    var Coffee = function () {};
+    Coffee.prototype = new Beverage();
+
+    Coffee.prototype.brew = function () {
+        console.log('冲泡咖啡');
+    };
+
+    Coffee.prototype.poutInCup = function () {
+        console.log('把咖啡倒进杯子');
+    };
+
+    Coffee.prototype.addCondiments = function () {
+        console.log('给咖啡加糖加牛奶');
+    };
+
+    Coffee.prototype.customerAddCondiments = function () {
+        return window.confirm('请问需要调料吗？');  
+    }
+
+    var coffee = new Coffee();
+    coffee.init();
+
+})();
+```
