--- a/source/_posts/变量的解构赋值.md
+++ b/source/_posts/变量的解构赋值.md
@@ -9,38 +9,37 @@ tags: ES6
 
 
 
-
+# 简介
 
 1. 基本用法： `let [a, b, c] = [1, 2, 3]`
 2. 默认值：`let [ n = 1] = []`
 3. 解构不成功，变量的值等于undefined
 
-<!--more-->
 
-## 对象的解构赋值
+
+# 对象的解构赋值
 
 1. 基本用法：`let {foo, bar} = {foo: 'aaa', bar: 'bbb'}`
 2. 默认值：`let {x = 3} = {x: undefined}`
 3. 默认值生效的条件是对象的属性值严格等于undefined
 
-## 字符串的解构赋值
+# 字符串的解构赋值
 
 1. 基本用法：`cosnt [a, b, c, d, e] = 'hello'` //a = 'h', b = 'e'
 
-## 用途：
+# 用途：
 
 1. 交换变量的值： 
 
-      ```
+      ```js
       let x = 1;
       let y = 2;
       [x, y ] = [y, x]
-
       ```
 
 2. 从函数返回多个值：
 
-      ```
+      ```js
       // 返回一个数组
 
       function example() {
@@ -57,12 +56,11 @@ tags: ES6
         };
       }
       let { foo, bar } = example();
-
       ```
 
 3. 定义函数参数：
 
-      ```
+      ```js
       // 参数是一组有次序的值
       function f([x, y, z]) { ... }
       f([1, 2, 3]);
@@ -74,7 +72,7 @@ tags: ES6
 
 4. 提取JSON数据：
 
-      ```
+      ```js
       let jsonData = {
         id: 42,
         status: "OK",
@@ -85,12 +83,11 @@ tags: ES6
 
       console.log(id, status, number);
       // 42, "OK", [867, 5309]
-
       ```
 
 5. 遍历map结构：
 
-      ```
+      ```js
       const map = new Map();
       map.set('first', 'hello');
       map.set('second', 'world');
@@ -101,5 +98,3 @@ tags: ES6
       // first is hello
       // second is world
       ```
-
-      ​
