--- a/source/_posts/电脑远程控制工具.md
+++ b/source/_posts/电脑远程控制工具.md
@@ -6,12 +6,12 @@ tags:
 	- Python
 ---
 
-## 简介
+# 简介
 
 今天分享的这个项目是用Python写的。通过手机远程控制电脑关机，或者接收指定的文件。
 
 
-## 图文介绍
+# 图文介绍
 
 通过输入简单的命令，就可以控制目标电脑，当别人在使用自己的电脑时，就可以远程关闭。如果想用来偷看别人电脑的信息，也是很方便的工具。只需要将程序复制到目标电脑中，双击运行一次，此程序就会在后台中悄悄运行，并且每次都会随电脑一起启动。接下来就可以获取此电脑的文件了。下面的第一张图片列出了所有符合的信息的具体地址，第二张拿的是具体的那几张图片。
 
