--- a/source/_posts/算法练习.md
+++ b/source/_posts/算法练习.md
@@ -2,6 +2,7 @@
 title: 计算机算法之---练习题
 date: 2019-04-17 21:16:52
 tags: 计算机算法
+
 ---
 
 
@@ -48,11 +49,11 @@ tags: 计算机算法
 38. 题目：写一个函数，求一个字符串的长度，在main函数中输入字符串，并输出其长度。
 39. 题目：字符串排序。
 40. 题目：海滩上有一堆桃子，五只猴子来分。第一只猴子把这堆桃子凭据分为五份，多了一个，这只猴子把多的一个扔入海中，拿走了一份。第二只猴子把剩下的桃子又平均分成五份，又多了一个，它同样把多的一个扔入海中，拿走了一份，第三、第四、第五只猴子都是这样做的，问海滩上原来最少有多少个桃子？
-41. 写一个函数，输出所有的排列组合。
-42. 写一个函数，给你一个字符串倒序输出来。
-43. 不使用中间变量 把两个变量的值互换。
-44. 将this is a test 转化为This Is A Test。
-45. 写一个单例模式。
-46. 对字母进行排序，如：s,a,g,d,b。
-47. 一个偶数总能表示为两个素数之和。
-48. 某个公司采用公用电话传递数据，数据是四位的整数，在传递过程中是加密的，加密规则如下：每位数字都加上5,然后用和除以10的余数代替该数字，再将第一位和第四位交换，第二位和第三位交换。
+40. 题目：写一个函数，输出所有的排列组合。
+40. 题目：写一个函数，给你一个字符串倒序输出来。
+40. 题目：不使用中间变量 把两个变量的值互换。
+40. 题目：将this is a test 转化为This Is A Test。
+40. 题目：写一个单例模式。
+40. 题目：对字母进行排序，如：s,a,g,d,b。
+40. 题目：一个偶数总能表示为两个素数之和。
+40. 题目：某个公司采用公用电话传递数据，数据是四位的整数，在传递过程中是加密的，加密规则如下：每位数字都加上5,然后用和除以10的余数代替该数字，再将第一位和第四位交换，第二位和第三位交换。
