--- a/source/_posts/2019-plan.md
+++ b/source/_posts/2019-plan.md
@@ -4,28 +4,37 @@ date: 2019-03-15 11:11:46
 tags: 计划
 ---
 
-# Javascript 
+## Javascript 
 
-* [ ] 使用javascript开发编程语言
-* [x] 使用javascript开发2d游戏引擎
-* [ ] 使用javascript开发jquery
+* <input type="checkbox" disabled/> 使用javascript开发编程语言
+* <input type="checkbox" checked disabled/> 使用javascript开发2d游戏引擎
+* <input type="checkbox" disabled/> 使用javascript开发jquery
 
-# 数据结构
+## 数据结构与算法
 
-* [ ] 可以手写创建各种数据结构
-* [ ] 牢记各种搜索排序算法，熟悉更深层此算法
+* <input type="checkbox" disabled/> 熟练使用数据结构
+* <input type="checkbox" disabled/> 熟练使用搜索算法
+* <input type="checkbox" disabled/> 熟练排使用序算法
+* <input type="checkbox" disabled/> 熟悉更深层次算法
 
-# 后端
+## 设计模式
 
-* [ ] 熟练使用flask
-* [ ] 熟练使用docker部署flask应用
-* [ ] 熟练使用ubuntu操作系统
+* <input type="checkbox" disabled/> 熟练运用设计模式在项目中
 
-# 架构及管理
+## 后端
 
-* [ ] 学习标准软件架构流程
-* [ ] 使用所学知识做一款较好的软件
-* [ ] 学习如何领导团队
+* <input type="checkbox" disabled/> 熟练使用flask
+* <input type="checkbox" disabled/> 熟练使用docker部署flask应用
+* <input type="checkbox" disabled/> 熟练使用ubuntu操作系统
+* <input type="checkbox" disabled/> 熟练使用koa写node中间件
 
+## 架构及管理
 
+* <input type="checkbox" disabled/> 学习标准软件架构流程
+* <input type="checkbox" disabled/> 使用所学知识做一款较好的软件
+* <input type="checkbox" disabled/> 学习如何领导团队
+
+## 项目
+
+* <input type="checkbox" checked disabled/> 完成Makedown编辑器的开发
 
