--- a/source/_posts/2019-plan.md
+++ b/source/_posts/2019-plan.md
@@ -4,39 +4,76 @@ date: 2019-03-15 11:11:46
 tags: 计划
 ---
 
-## Javascript 
+## 目标
 
-* <input type="checkbox" disabled/> 使用javascript开发编程语言
-* <input type="checkbox" checked disabled/> 使用javascript开发2d游戏引擎
-* <input type="checkbox" disabled/> 使用javascript开发jquery
+<input type="checkbox" disabled checked/> [熟练使用基本的数据结构](https://renhongl.github.io/tags/数据结构与算法/)
 
-<!-- more -->
+<input type="checkbox" disabled checked/> [熟练使用搜索算法](https://renhongl.github.io/tags/数据结构与算法/)
 
-## 数据结构与算法
+<input type="checkbox" disabled checked/> [熟练使用各种排序算法](https://renhongl.github.io/tags/数据结构与算法/)
 
-* <input type="checkbox" disabled/> 熟练使用数据结构
-* <input type="checkbox" disabled/> 熟练使用搜索算法
-* <input type="checkbox" disabled/> 熟练排使用序算法
-* <input type="checkbox" disabled/> 熟悉更深层次算法
+<input type="checkbox" disabled/> 了解深层次算法
 
-## 设计模式
+<input type="checkbox" disabled/> 再次熟悉各种设计模式
 
-* <input type="checkbox" disabled/> 熟练运用设计模式在项目中
+<input type="checkbox" disabled checked/> [熟悉ThreeJS使用方法](https://github.com/renhongl/threejs-example)
 
-## 后端
+<input type="checkbox" disabled checked/> 熟练使用C#和Unity 3D
 
-* <input type="checkbox" disabled/> 熟练使用flask
-* <input type="checkbox" disabled/> 熟练使用docker部署flask应用
-* <input type="checkbox" disabled/> 熟练使用ubuntu操作系统
-* <input type="checkbox" disabled/> 熟练使用koa写node中间件
+<input type="checkbox" disabled/> 熟练使用Java和Spring Boot
 
-## 架构及管理
+<input type="checkbox" disabled checked/> 熟练使用Angular开发项目
 
-* <input type="checkbox" disabled/> 学习标准软件架构流程
-* <input type="checkbox" disabled/> 使用所学知识做一款较好的软件
-* <input type="checkbox" disabled/> 学习如何领导团队
+<input type="checkbox" disabled/> 熟练使用RxJS响应式编程
+
+## 书籍
+<input type="checkbox" disabled checked/> Unity 3D 完全自学教程
+
+<input type="checkbox" disabled checked/> Unity 5.X 3D游戏开发技术详解与典型案例
+
+<input type="checkbox" disabled checked/> Three.js 开发指南
+
+<input type="checkbox" disabled checked/> Angular 从零到一
+
+<input type="checkbox" disabled checked/> 深入浅出RxJS
+
+<input type="checkbox" disabled/> SpringBoot 揭秘：快速构建微服务体系
+
+<input type="checkbox" disabled/> 我的第一本算法书
+
+<input type="checkbox" disabled/> Java从入门到精通
+
+<input type="checkbox" disabled/> C#从入门到精通
+
+## 教程
+
+<input type="checkbox" disabled checked /> Pluggable Angular Project
+
+<input type="checkbox" disabled checked /> [Unity 3D 教程](http://c.biancheng.net/unity3d/)
+
+<input type="checkbox" disabled checked /> 数据结构网络教程
+
+<input type="checkbox" disabled checked /> [排序算法网络教程](https://renhongl.github.io/tags/数据结构与算法/)
+
+<input type="checkbox" disabled/> [Spring](https://www.w3cschool.cn/wkspring/pesy1icl.html)
+
+<input type="checkbox" disabled/> [Spring Boot](https://www.yiibai.com/spring-boot/)
+
+
+<input type="checkbox" disabled/> [KOA 中文教程](https://koa.bootcss.com)
 
 ## 项目
 
-* <input type="checkbox" checked disabled/> 完成Makedown编辑器的开发
+<input type="checkbox" disabled checked /> [Markdown Editor](https://github.com/renhongl/markdown-editor)
+
+<input type="checkbox" disabled checked /> [Code Online](https://github.com/renhongl/code-online)
+
+<input type="checkbox" disabled checked /> [Wang Yi Yun Online](https://github.com/renhongl/wangyiyun-online)
+
+<input type="checkbox" disabled checked /> [网易云评论爬虫](https://github.com/renhongl/python-tools)
+
+<input type="checkbox" disabled checked /> [微信自动回复](https://github.com/renhongl/python-tools)
+
+
+
 
