--- a/source/_posts/原型模式.md
+++ b/source/_posts/原型模式.md
@@ -6,7 +6,7 @@ tags:
 ---
 
 
-# 什么是原型模式
+## 什么是原型模式
 
 类并不是必须的，对象未必需要从类中创建而来，一个对象是通过克隆另外一个对象所得到的。
 
@@ -26,7 +26,7 @@ ECMAScript5提供了Object.create方法，可以用来克隆对象。
 
 
 
-# 函数式例子：
+## 函数式例子：
 
 ```js
 /**
