--- a/source/_posts/2018-plan.md
+++ b/source/_posts/2018-plan.md
@@ -4,75 +4,75 @@ date: 2018-02-09 11:11:46
 tags: 计划
 ---
 
-# 2018学习计划
+# 2018 学习计划
 
 ## Javascript:
 
-* [x] Javascript标准参考教程
-* [x] JavaScript设计模式与开发实践
-* [x] Javascript编程精解
-* [x] ES6
+- [x] Javascript 标准参考教程
+- [x] JavaScript 设计模式与开发实践
+- [x] Javascript 编程精解
+- [x] ES6
 
 <!-- more -->
 
 ## Python:
 
-* [x] python基础(廖雪峰网络教程)
-* [x] 精通python网络爬虫
-* [ ] python爬虫开发与项目实战
-* [x] django(网络教程)
-* [x] flask web开发实战
+- [x] python 基础(廖雪峰网络教程)
+- [x] 精通 python 网络爬虫
+- [ ] python 爬虫开发与项目实战
+- [x] django(网络教程)
+- [x] flask web 开发实战
 
 ## Nodejs:
 
-* [ ] ~~nodejs权威指南~~
+- [ ] ~~nodejs 权威指南~~
 
 ## React:
 
-* [x] react英文官网
-* [x] 深入浅出react和redux
-* [x] react redux
-* [x]  react router
-* [x] redux thunk
-* [x] redux saga
-* [x] react jest
+- [x] react 英文官网
+- [x] 深入浅出 react 和 redux
+- [x] react redux
+- [x] react router
+- [x] redux thunk
+- [x] redux saga
+- [x] react jest
 
 ## Webpack:
 
-* [x]  webpack英文官网
+- [x] webpack 英文官网
 
 ## Linux:
 
-* [ ]  linux shell编程从初学到精通
+- [ ] linux shell 编程从初学到精通
 
 ## 架构:
 
-* [ ] 软件架构设计
+- [ ] 软件架构设计
 
 ## 项目管理:
 
-* [x] 事业发展
-* [x] 技术选型
+- [x] 事业发展
+- [x] 技术选型
 
 ## 英语:
 
-* [ ] 使用百词斩，每天背25个单词
-* [ ] 使用流利说每天听说30分钟
+- [ ] 使用百词斩，每天背 25 个单词
+- [ ] 使用流利说每天听说 30 分钟
 
-## 2018目标:
+## 2018 目标:
 
-* [x] 完成基于原生js的 UI插件Mr UI开发
-* [ ]  ~~使用python django为Mr UI开发后台~~
-* [ ] 使用python flask开发简书后台
-* [ ] 使用python爬虫为简书项目挖取数据
-* [ ]  ~~对node有全面深入的理解~~
-* [x] 对react及redux有全面深入的理解
-* [ ] 熟练使用python编写各种爬虫
-* [x] 熟练掌握es6, es7语法
-* [ ] 正常无抵触的阅读全英文文档
-* [x] 学会使用Axure设计原型
-* [ ] 使用react, redux, router, saga模仿开发简书网站
-* [ ] 使用python为简书网站做后台
+- [x] 完成基于原生 js 的 UI 插件 Mr UI 开发
+- [ ] ~~使用 python django 为 Mr UI 开发后台~~
+- [ ] 使用 python flask 开发简书后台
+- [ ] 使用 python 爬虫为简书项目挖取数据
+- [ ] ~~对 node 有全面深入的理解~~
+- [x] 对 react 及 redux 有全面深入的理解
+- [ ] 熟练使用 python 编写各种爬虫
+- [x] 熟练掌握 es6, es7 语法
+- [ ] 正常无抵触的阅读全英文文档
+- [x] 学会使用 Axure 设计原型
+- [ ] 使用 react, redux, router, saga 模仿开发简书网站
+- [ ] 使用 python 为简书网站做后台
 
 ## 技术提升计划
 
@@ -80,14 +80,16 @@ tags: 计划
 
 1.  前端开发技能：
 
-    1.  Javascript编程精解（熟悉Javascript基础知识）
-    2.  Javascript设计模式（提升Javascirpt编程能力）
+    1.  Javascript 编程精解（熟悉 Javascript 基础知识）
+    2.  Javascript 设计模式（提升 Javascirpt 编程能力）
     3.  React and Redux（掌握一门流行框架）
+
 2.  程序员基础技能：
 
-    1.  高级语言程序设计（Javascript加一门后端语言）
+    1.  高级语言程序设计（Javascript 加一门后端语言）
     2.  数据结构
     3.  算法分析与设计
+
 3.  良好的编码习惯：
 
     1.  阅读几篇和编程语言相关的编码规范
@@ -95,4 +97,4 @@ tags: 计划
 ### 练习
 
 1.  锻炼思维
-2.  在掌握基础技能的基础上，在leetcode练习算法
+2.  在掌握基础技能的基础上，在 leetcode 练习算法
